--- a/stylesheets/screen-base.css
+++ b/stylesheets/screen-base.css
@@ -1,4 +1,4 @@
-/* line 17, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, ../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../RailsInstaller/Ruby1.8.7/lib/ruby/gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -212,20 +212,25 @@ li p {
   margin: 40px 0 10px 0;
 }
 
+/* line 86, ../sass/_mobile.scss */
+.gallery li p {
+  margin: 0;
+}
+
 /* SPECIAL HANDLERS */
 /* HOME PAGE */
-/* line 91, ../sass/_mobile.scss */
+/* line 94, ../sass/_mobile.scss */
 #homePage #photo h2 {
   margin: 0;
 }
 
-/* line 96, ../sass/_mobile.scss */
+/* line 99, ../sass/_mobile.scss */
 #homePage #library h2 {
   /*  color: $paleGreen; */
   margin: 50px 0 0 0;
 }
 
-/* line 101, ../sass/_mobile.scss */
+/* line 104, ../sass/_mobile.scss */
 #homePage h3 {
   clear: both;
   padding: 10px 0;
@@ -234,7 +239,7 @@ li p {
   font-style: normal;
 }
 
-/* line 109, ../sass/_mobile.scss */
+/* line 112, ../sass/_mobile.scss */
 .headingblock {
   display: block;
   float: left;
@@ -244,37 +249,37 @@ li p {
   font-size: 30px;
 }
 
-/* line 117, ../sass/_mobile.scss */
+/* line 120, ../sass/_mobile.scss */
 .subheading {
   font-family: "Spinnaker", "Century Gothic", "Tahoma", "Verdana", sans-serif;
   font-size: 16px;
   margin: 3px 0 0 10px;
 }
 
-/* line 124, ../sass/_mobile.scss */
+/* line 127, ../sass/_mobile.scss */
 #library .headingblock {
   margin: 0 0 0 10px;
 }
 
-/* line 129, ../sass/_mobile.scss */
+/* line 132, ../sass/_mobile.scss */
 #homePage h4, h5, p {
   margin: 20px 0 10px 10px;
 }
 
-/* line 133, ../sass/_mobile.scss */
+/* line 136, ../sass/_mobile.scss */
 #homePage h4 {
   font-size: 18px;
   font-weight: bold;
 }
 
-/* line 138, ../sass/_mobile.scss */
+/* line 141, ../sass/_mobile.scss */
 #homePage h5 {
   font-size: 16px;
   font-weight: bold;
 }
 
 /* PHOTO GALLERIES */
-/* line 146, ../sass/_mobile.scss */
+/* line 149, ../sass/_mobile.scss */
 .showtitle strong, .gallery h2, .gallery h2 strong {
   font-family: "PT Serif", "Palatino Linotype", "Georgia", serif;
   font-size: 18px;
@@ -282,58 +287,63 @@ li p {
   font-style: italic;
 }
 
-/* line 153, ../sass/_mobile.scss */
+/* line 156, ../sass/_mobile.scss */
 .gallery h2 {
   margin: 20px 5px 0 0;
 }
 
-/* line 157, ../sass/_mobile.scss */
+/* line 160, ../sass/_mobile.scss */
 #photo h4:first-child {
   margin-top: 40px;
 }
 
-/* line 161, ../sass/_mobile.scss */
+/* line 164, ../sass/_mobile.scss */
 .gallery p strong {
   font-family: "PT Serif", "Palatino Linotype", "Georgia", serif;
   font-style: italic;
   font-weight: bold;
 }
 
-/* line 167, ../sass/_mobile.scss */
+/* line 170, ../sass/_mobile.scss */
+.gallery #content ul li img {
+  border: 4px solid black;
+}
+
+/* line 174, ../sass/_mobile.scss */
 .gallery img {
   margin: 10px 0;
 }
 
-/* line 171, ../sass/_mobile.scss */
+/* line 178, ../sass/_mobile.scss */
 .showtitle {
   font-size: 12px;
 }
 
 /* RESUME */
-/* line 177, ../sass/_mobile.scss */
+/* line 184, ../sass/_mobile.scss */
 #resume h4 {
   margin: 0 0 15px 0;
 }
 
-/* line 181, ../sass/_mobile.scss */
+/* line 188, ../sass/_mobile.scss */
 #resume #content ul li {
   list-style-type: disc;
   margin: 0 10px 10px 30px;
 }
 
-/* line 186, ../sass/_mobile.scss */
+/* line 193, ../sass/_mobile.scss */
 #resume p {
   margin: 5px 15px;
 }
 
-/* line 190, ../sass/_mobile.scss */
+/* line 197, ../sass/_mobile.scss */
 #resume h4 {
   font-size: 14px;
   font-weight: bold;
   margin: 10px 15px;
 }
 
-/* line 196, ../sass/_mobile.scss */
+/* line 203, ../sass/_mobile.scss */
 #resume strong {
   /*  background-color: $resumeStrongBackground;
   	@include border-radius(20px); */
@@ -344,7 +354,7 @@ li p {
                    with some tweaks
 */
 /* line 186, ../sass/_mobile.scss */
-/* line 208, ../sass/_mobile.scss */
+/* line 215, ../sass/_mobile.scss */
 #Xnav {
   /* IE6 needs this */
   position: relative;
@@ -355,7 +365,7 @@ li p {
   clear: both;
 }
 
-/* line 217, ../sass/_mobile.scss */
+/* line 224, ../sass/_mobile.scss */
 .page #nav {
   /* IE6 needs this */
   position: relative;
@@ -365,14 +375,14 @@ li p {
 }
 
 /* line 191, ../sass/_mobile.scss */
-/* line 228, ../sass/_mobile.scss */
+/* line 235, ../sass/_mobile.scss */
 #nav ul {
   list-style: none;
 }
 
 /* line 202, ../sass/_mobile.scss */
 /* line 196, ../sass/_mobile.scss */
-/* line 234, ../sass/_mobile.scss */
+/* line 241, ../sass/_mobile.scss */
 #nav a {
   width: 80px;
   /* lines up better in mobile*/
@@ -384,27 +394,27 @@ li p {
 }
 
 /* MISC */
-/* line 245, ../sass/_mobile.scss */
+/* line 252, ../sass/_mobile.scss */
 input, textarea {
   width: 200px;
 }
 
-/* line 248, ../sass/_mobile.scss */
+/* line 255, ../sass/_mobile.scss */
 .hideMobile {
   display: none;
 }
 
-/* line 252, ../sass/_mobile.scss */
+/* line 259, ../sass/_mobile.scss */
 #homePage img {
   margin: 4px;
 }
 
-/* line 256, ../sass/_mobile.scss */
+/* line 263, ../sass/_mobile.scss */
 .floatRight {
   float: right;
 }
 
-/* line 260, ../sass/_mobile.scss */
+/* line 267, ../sass/_mobile.scss */
 .floatLeft {
   float: left;
 }
